first functional version

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "google-news",
   "version": "1.0.0",
-  "description": "A JavaScript API for querying Google News ",
-  "main": "index.js",
+  "description": "JavaScript API for querying Google News",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,14 @@
     "url": "https://github.com/pmoelgaard/google-news"
   },
   "author": "Peter Andreas Moelgaard <admin@petermolgard.com> (http://petermolgaard.com/)",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "extend": "^2.0.0",
+    "feedparser": "^0.19.2",
+    "lokijs": "^1.1.15",
+    "request": "^2.53.0"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.9.1"
+  }
 }
