--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "extend": "^2.0.0",
     "feedparser": "^0.19.2",
     "lokijs": "^1.1.15",
+    "nx-url-hash": "^1.0.1",
     "request": "^2.53.0"
   },
   "devDependencies": {
