options now being passed down to stream

--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "author": "Peter Andreas Moelgaard <admin@petermolgard.com> (http://petermolgaard.com/)",
   "license": "Apache-2.0",
   "dependencies": {
+    "deep-extend": "^0.3.2",
     "extend": "^2.0.0",
     "feedparser": "^0.19.2",
     "lokijs": "^1.1.15",
-    "nx-url-hash": "^1.0.1",
+    "nx-url-hash": "^1.0.6",
     "request": "^2.53.0"
   },
   "devDependencies": {
