--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "request": "^2.53.0"
   },
   "devDependencies": {
-    "coffee-script": "^1.9.1"
+    "coffee-script": "^1.9.1",
+    "should": "^5.0.1"
   }
 }
