--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
   - stable
 
 before_script:
- - chmod a+x tests
- - chmod a+x ../tests
- - chmod a+x index.js
- - chmod a+x ../index.js
- - chmod a+x tests/index.js
- - chmod a+x ../tests/index.js
+ - chmod a+rx tests
+ - chmod a+rx ../tests
+ - chmod a+rx index.js
+ - chmod a+rx ../index.js
+ - chmod a+rx tests/index.js
+ - chmod a+rx ../tests/index.js
