--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "google-news",
   "version": "1.3.4",
   "description": "JavaScript API for querying Google News",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "tests/index.js"
+    "test": "tests/GoogleNews.js"
   },
   "keywords": [
     "google",
