--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript API for querying Google News",
   "main": "index.js",
   "scripts": {
-    "test": "coffee --compile && mocha tests && jshint index.js && istanbul cover"
+    "test": "coffee --compile && mocha tests && jshint index.js"
   },
   "keywords": [
     "google",
